--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@
     <script src="js/main.js"></script>
 </body>
 
-
 <header>
     <div class="header-balk">
-        <button>FAQ</button>
+        <p>Het Labyrint van Heerlen "Een helende weg naar jezelf”
+        </p>
+        <img class="logo" src="img/logo-wit.svg" alt="">
+
+        <button><a href="/FAQ.html">FAQ</a></button>
     </div>
-    <div id="tekst-balk"></div>
-    <img src="img/foto-labyrint.jpeg" alt="foto-van-het-labyrint">
 </header>
+
+
+
+<img src="img/foto-labyrint.png" alt="foto-van-het-labyrint">
+
+<!-- <img class="svg" src="img/background-svg.svg" alt=""> -->
+
 <main>
-    <p id="light">Als we het leven als een doolhof zien Is elke vergissing een niet noodzakelijke omweg met de prijs van verspilde tijd en energie Als we naar het leven kijken als een labyrint Dan hoort elke vergissing bij de weg zelf Is het een onderdeel van ons voortgaan
-        En kunnen we in mildheid leren.
+
+
+    <p class="light">Als we het leven als een doolhof zien. Is elke vergissing een niet noodzakelijke omweg met de prijs van verspilde tijd en energie. Als we naar het leven kijken als een labyrint dan hoort elke vergissing bij de weg zelf. Is het een onderdeel van ons
+        voortgaan en kunnen we in mildheid leren.
     </p>
     <h1>Het Heerlense Labyrint</h1>
     <p>
@@ -76,6 +86,7 @@
     </h2>
     <h2> Dit is het vierde bestand: <audio src="/audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
+    <p class="einde">We wensen jou een mooie en inzicht gevende labyrint wandeling toe.</p>
 </main>
 <footer>
 
