--- a/FAQ.html
+++ b/FAQ.html
@@ -66,6 +66,12 @@
 
 
     <footer>
+        <main>
+            <p class="footertext">
+                Dit labyrint is mede mogelijk gemaakt door een Frisse Wind. <br> https://frissewindheerlen.nl
+            </p>
+
+        </main>
 
     </footer>
 
