--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     <p>Hieronder vind je de muziek speciaal voor dit labyrint gecomponeerd door de componist Ralf Groenveld. Wanneer je met je oortjes in door het labyrint loopt kan de muziek je helpen om je aandacht nog meer naar binnen te richten.
     </p>
 
-    <h2> Dit is het eerste bestand: <audio src="/audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
+    <h2> Dit is het eerste bestand: <audio src="audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2> Dit is het tweede bestand: <audio src="/audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
+    <h2> Dit is het tweede bestand: <audio src="audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2> Dit is het derde bestand: <audio src="/audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
+    <h2> Dit is het derde bestand: <audio src="audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2> Dit is het vierde bestand: <audio src="/audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
+    <h2> Dit is het vierde bestand: <audio src="audio/tomp3.cc - Leonardo DiCaprios Moving Speech on Climate Change.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
     <p class="einde">We wensen jou een mooie en inzicht gevende labyrint wandeling toe.</p>
 </main>
