--- a/FAQ.html
+++ b/FAQ.html
@@ -15,7 +15,8 @@
         <div class="header-balk">
             <p class="begin">Het Labyrint van Heerlen "Een helende weg naar jezelf”
             </p>
-            <img class="logo" src="img/logo-wit.svg" alt="">
+            <a href="/index.html"> <img class="logo" src="img/logo-wit.svg" alt=""></a>
+
 
             <button><a href="/index.html">Terug</a></button>
         </div>
