--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <div class="header-balk">
         <p>Het Labyrint van Heerlen "Een helende weg naar jezelf”
         </p>
+
         <img class="logo" src="img/logo-wit.svg" alt="">
+
+
 
         <button><a href="/FAQ.html">FAQ</a></button>
     </div>
@@ -30,7 +33,7 @@
 
 <img src="img/foto-labyrint.png" alt="foto-van-het-labyrint">
 
-<!-- <img class="svg" src="img/background-svg.svg" alt=""> -->
+
 
 <main>
 
@@ -89,7 +92,13 @@
     <p class="einde">We wensen jou een mooie en inzicht gevende labyrint wandeling toe.</p>
 </main>
 <footer>
+    <main>
+        <p class="footertext">
+            Dit labyrint is mede mogelijk gemaakt door een Frisse Wind.
+        </p>
+        <a href="https://frissewindheerlen.nl/">www.frissewindheerlen.nl</a>
 
+    </main>
 </footer>
 
 
