--- a/index.html
+++ b/index.html
@@ -81,15 +81,17 @@
     <p>Hieronder vind je de muziek speciaal voor dit labyrint gecomponeerd door de componist Ralf Groenveld. Wanneer je met je oortjes in door het labyrint loopt kan de muziek je helpen om je aandacht nog meer naar binnen te richten.
     </p>
 
-    <h2>Embrace<audio src="audio/Embrace.mp3" width="300" height="80" controls="controls"></audio>
+    <h2>Embrace <br><audio src="audio/Embrace.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2>Essence<audio src="audio/Essence.mp3" width="300" height="80" controls="controls"></audio>
+    <h2>Essence <br><audio src="audio/Essence.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2>Inner Peace<audio src="audio/Inner Peace.mp3" width="300" height="80" controls="controls"></audio>
+    <h2>Inner Peace <br><audio src="audio/Inner Peace.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2>Lightly<audio src="audio/Lightly.mp3" width="300" height="80" controls="controls"></audio>
+    <h2>Lightly <br><audio src="audio/Lightly.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
-    <h2>Lost<audio src="audio/Lost.mp3" width="300" height="80" controls="controls"></audio>
+    <h2>Lost <br><audio src="audio/Lost.mp3" width="300" height="80" controls="controls"></audio>
+    </h2>
+    <h2>De muziek aan een stuk<br><audio src="audio/Audio Labyrint_1.mp3" width="300" height="80" controls="controls"></audio>
     </h2>
     <p class="einde">We wensen jou een mooie en inzicht gevende labyrint wandeling toe.</p>
 </main>
