--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-        <button><a href="/FAQ.html">FAQ</a></button>
+        <button><a href="FAQ.html">FAQ</a></button>
     </div>
 </header>
 
