--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Labyrint Heerlen</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -25,7 +25,7 @@
 
 
 
-        <button><a href="FAQ.html">FAQ</a></button>
+        <button><a href="faq.html">FAQ</a></button>
     </div>
 </header>
 
