--- a/faq.html
+++ b/faq.html
@@ -26,8 +26,8 @@
         <h1 class="h1-faq">
             • Waar komt het labyrint vandaan en hoe is het ontstaan?
         </h1>
-        <p>Niemand weet precies waar het labyrint vandaan komt en wanneer het ontstaan is. De eerste labyrintische vormen waren in rotsen uitgehakt en stammen vermoedelijk uit het begin van de bronstijd (ca 2500-1800 v.C.). Labyrinten worden over de hele
-            wereld gevonden, van Europa tot de beide Amerika’s, van Afrika tot Siberië. Van de native Americans tot de christenen, van de hindoes tot de Aboriginals. Oude labyrinten worden gevonden aan kustlijnen, bij grafheuvels of in kerken. Tegenwoordig
+        <p>Niemand weet precies waar het labyrint vandaan komt en wanneer het ontstaan is. De eerste labyrintische vormen waren in rotsen uitgehakt en stammen vermoedelijk uit het begin van de bronstijd (ca 2500 tot 1800 v.C.). Labyrinten worden over de
+            hele wereld gevonden, van Europa tot de beide Amerika’s, van Afrika tot Siberië. Van de native Americans tot de christenen, van de hindoes tot de Aboriginals. Oude labyrinten worden gevonden aan kustlijnen, bij grafheuvels of in kerken. Tegenwoordig
             worden ze net als het labyrint van Heerlen aangelegd in openbare parken of bij centra voor zingeving en persoonlijke ontwikkeling.</p>
         <h1>
             • Hoe loop je het labyrint?
