--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 
-<img src="img/foto-labyrint.png" alt="foto-van-het-labyrint">
+<img src="img/labyrint-drone.jpg" alt="foto-van-het-labyrint">
 
 
 
