--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <footer>
     <main>
         <p class="footertext">
-            Dit labyrint is mede mogelijk gemaakt door een Frisse Wind.
+            Dit labyrint is mede mogelijk gemaakt door Frisse Wind.
         </p>
         <a href="https://frissewindheerlen.nl/">www.frissewindheerlen.nl</a>
 
